[gd_scene load_steps=8 format=3 uid="uid://ckfu7he0vgiab"]

[ext_resource type="Script" uid="uid://buhwamjhhmanh" path="res://level.gd" id="1_rhnph"]
[ext_resource type="PackedScene" uid="uid://dmrc341gv6ohb" path="res://army/army.tscn" id="3_2g6lf"]
[ext_resource type="PackedScene" uid="uid://dfvp6yysbr662" path="res://minion/minion.tscn" id="5_ayoke"]
[ext_resource type="PackedScene" uid="uid://5vjdi3lh2uj8" path="res://resources/generators/wood_mine.tscn" id="6_dbhfh"]
[ext_resource type="PackedScene" uid="uid://feywkuh1juuv" path="res://resources/generators/food_farm.tscn" id="7_gm6ju"]
[ext_resource type="PackedScene" uid="uid://j26qs1wki8oi" path="res://resources/generators/stone_mine.tscn" id="8_754py"]
[ext_resource type="PackedScene" uid="uid://bx2ov2sv7h0q0" path="res://resources/buildings/city.tscn" id="9_brqpx"]

[node name="Level" type="Node2D"]
script = ExtResource("1_rhnph")

[node name="BaseA" type="Node2D" parent="."]

[node name="WildMinions" type="Node2D" parent="BaseA"]
position = Vector2(769, -1070)

[node name="WildMinion" parent="BaseA/WildMinions" instance=ExtResource("5_ayoke")]
position = Vector2(-839, -326)

[node name="WildMinion2" parent="BaseA/WildMinions" instance=ExtResource("5_ayoke")]
position = Vector2(-782, -513)

[node name="WildMinion3" parent="BaseA/WildMinions" instance=ExtResource("5_ayoke")]
position = Vector2(-1004, -486)

[node name="WildMinion4" parent="BaseA/WildMinions" instance=ExtResource("5_ayoke")]
position = Vector2(-1088, -355)

[node name="WildMinion5" parent="BaseA/WildMinions" instance=ExtResource("5_ayoke")]
position = Vector2(-1325, -1488)

[node name="ResourceGenerators" type="Node2D" parent="BaseA"]
position = Vector2(-2320, -651)

[node name="WoodMine" parent="BaseA/ResourceGenerators" instance=ExtResource("6_dbhfh")]
position = Vector2(782, 7)
use_first_free_minion = true

[node name="FoodFarm" parent="BaseA/ResourceGenerators" instance=ExtResource("7_gm6ju")]
position = Vector2(951, -1497)
use_first_free_minion = true

[node name="StoneMine" parent="BaseA/ResourceGenerators" instance=ExtResource("8_754py")]
position = Vector2(827, 1515)
use_first_free_minion = true

[node name="City" parent="BaseA" instance=ExtResource("9_brqpx")]
position = Vector2(1153, -150)

[node name="BaseB" type="Node2D" parent="."]
position = Vector2(7597, 0)

[node name="WildMinions" type="Node2D" parent="BaseB"]
position = Vector2(769, -1070)

[node name="WildMinion" parent="BaseB/WildMinions" instance=ExtResource("5_ayoke")]
position = Vector2(-839, -326)

[node name="WildMinion2" parent="BaseB/WildMinions" instance=ExtResource("5_ayoke")]
position = Vector2(-782, -513)

[node name="WildMinion3" parent="BaseB/WildMinions" instance=ExtResource("5_ayoke")]
position = Vector2(-1004, -486)

[node name="WildMinion4" parent="BaseB/WildMinions" instance=ExtResource("5_ayoke")]
position = Vector2(-1088, -355)

[node name="WildMinion5" parent="BaseB/WildMinions" instance=ExtResource("5_ayoke")]
position = Vector2(-1325, -1488)

[node name="ResourceGenerators" type="Node2D" parent="BaseB"]
position = Vector2(-2320, -651)

[node name="WoodMine" parent="BaseB/ResourceGenerators" instance=ExtResource("6_dbhfh")]
position = Vector2(782, 7)
use_first_free_minion = true

[node name="FoodFarm" parent="BaseB/ResourceGenerators" instance=ExtResource("7_gm6ju")]
position = Vector2(951, -1497)
use_first_free_minion = true

[node name="StoneMine" parent="BaseB/ResourceGenerators" instance=ExtResource("8_754py")]
position = Vector2(827, 1515)
use_first_free_minion = true

[node name="City" parent="BaseB" instance=ExtResource("9_brqpx")]
position = Vector2(1153, -150)

[node name="Army1" parent="." instance=ExtResource("3_2g6lf")]
player_number = 1

[node name="Army2" parent="." instance=ExtResource("3_2g6lf")]
position = Vector2(7596, 0)
player_number = 2

[node name="DayTicker" type="Timer" parent="."]

[connection signal="day_passed" from="." to="BaseA/ResourceGenerators/WoodMine" method="_on_level_day_passed"]
[connection signal="day_passed" from="." to="BaseA/ResourceGenerators/FoodFarm" method="_on_level_day_passed"]
[connection signal="day_passed" from="." to="BaseA/ResourceGenerators/StoneMine" method="_on_level_day_passed"]
[connection signal="day_passed" from="." to="BaseA/City" method="_on_level_day_passed"]
[connection signal="day_passed" from="." to="BaseB/ResourceGenerators/WoodMine" method="_on_level_day_passed"]
[connection signal="day_passed" from="." to="BaseB/ResourceGenerators/FoodFarm" method="_on_level_day_passed"]
[connection signal="day_passed" from="." to="BaseB/ResourceGenerators/StoneMine" method="_on_level_day_passed"]
[connection signal="day_passed" from="." to="BaseB/City" method="_on_level_day_passed"]
[connection signal="ready" from="Army1" to="." method="_on_army_ready" flags=18]
[connection signal="ready" from="Army2" to="." method="_on_army_ready" flags=18]
[connection signal="timeout" from="DayTicker" to="." method="_on_day_ticker_timeout"]
